# GCRecompiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
.github/workflows/: build.yml
include/: recomp_runtime.h
include/gcrecomp/analysis/: analyzer.h  cfg.h  disasm.h  instruction.h  ir.h  optimizer.h
include/gcrecomp/loader/: binary.h  rel.h
src/: main.cpp
src/analysis/: analyzer.cpp  cfg.cpp  disasm.cpp  lifter.cpp  optimizer.cpp
src/codegen/: emitter.cpp
src/loader/: rel.cpp
tests/: test_main.cpp
tools/: README.txt  extract_iso.bat
